argocd/aws/762447640649/clusters/oncokb-dev/apps/ingress/ingress_oncokb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - www.oncokb.dev.aws.mskcc.org
      - core.oncokb.dev.aws.mskcc.org
      - germline.oncokb.dev.aws.mskcc.org
      - keycloak.oncokb.dev.aws.mskcc.org
      - ct.oncokb.dev.aws.mskcc.org
  rules:
    - host: "www.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-public
                port:
                  number: 9095
    - host: "core.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core
                port:
                  number: 8888
    - host: "germline.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core-germline
                port:
                  number: 8888
    - host: keycloak.oncokb.dev.aws.mskcc.org
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-keycloak-http
                port:
                  name: http
    - host: "ct.oncokb.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core-clinical-trials
                port:
                  number: 8888
  ingressClassName: nginx
